# MNIST_Recognition

./: CMakeLists.txt  README.md
src/: main.cpp
